fix: fix cors issue related with fe's access